feat: Ajuste nome das variaveis
